# WallpaperChanger

./: .gitignore  CMakeLists.txt  ChangeLog.md  Changelog.md  LICENSE  README.md  TODO.md  TODO.txt  WallpaperChanger.sln  WallpaperChanger.vcxproj  WallpaperChanger.vcxproj.filters
core/: ArgumentHandler.cpp  ArgumentHandler.h  CMakeLists.txt  CacheIO.cpp  CacheIO.h  ConfigManager.h  WallpaperChanger-core.cpp  WallpaperManager.cpp  WallpaperManager.h
gui/: CMakeLists.txt  CacheBrowserDlg.cpp  CacheBrowserDlg.h  ConfigManager.cpp  GlobTools.h  ImageEditor.cpp  ImageEditor.h  ImageEditorDlg.cpp  ImageEditorDlg.h  ProgramVersion.h  Qt_CustomEventID.h  WallpaperChanger-gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow_GeneralTab.cpp  mainwindow_SettingTab.cpp  mainwindow_TrayIcon.cpp  mainwindow_WallpaperTab.cpp  resources.h  resources.qrc  resources.rc  timer.cpp  timer.h
gui/res/: WallpaperChanger.aps
gui/ui/: cachebrowserdlg.ui  mainwindow.ui
include/: GlobTools.h  WallpaperChanger.h  WallpaperChangerDlg.h
res/: Resource.h  WallpaperChanger.rc  WallpaperChanger.rc2
src/: ConfigManager.cpp  ConfigManager.h  Debug.cpp  Debug.h  GlobTools.cpp  GlobTools.h  MainFrm.cpp  MainFrm.h  Resource.h  ScreenStatus.cpp  ScreenStatus.h  WallpaperChanger.cpp  WallpaperChanger.h  WallpaperChangerDlg.cpp  WallpaperChangerDlg.h  WallpaperManager.cpp  WallpaperManager.h  akTrayIcon.cpp  akTrayIcon.h  main.cpp
utilities/: AppLaunchHandler.cpp  AppLaunchHandler.h  CacheRW.cpp  CacheRW.h  ConfigManager.cpp  ConfigManager.h  GlobTools.cpp  GlobTools.h
